Using Sharp to implement thumbnail API
