# api/swagger/swagger.yaml
@@ -1,6 +1,6 @@
 swagger: "2.0"
 info:
-  version: "0.0.1"
+  version: "1.1.0"
   title: Images Bank API
 # basePath prefixes all resource paths 
 basePath: /api
@@ -158,6 +158,9 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+##########################################################################################
+##          Images management
+##
   /collections:
     x-swagger-router-controller: images
     get:
@@ -331,6 +334,46 @@ paths:
       responses:
         "200":
           description: Success
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /collections/{collection}/images/{imageid}/thumbnail:
+    x-swagger-router-controller: images
+    get:
+      tags:
+        - Image
+      description: download a thumbnail of an image
+      operationId: downloadThumbnailImage
+      produces:
+        - image/jpeg
+      parameters:
+        - name: ApiKey
+          in: header
+          description: The user api-key
+          required: true
+          type: string
+        - name: collection
+          in: path
+          description: The collection to upload the image in
+          required: true
+          type: string
+        - name: imageid
+          in: path
+          description: The id of the image to download
+          required: true
+          type: string
+        - name: width
+          in: query
+          description: The width of the thumbnail
+          required: false
+          type: integer
+      responses:
+        "200":
+          description: The image
+          schema:
+            type: file
+        # responses may fall through to errors
         default:
           description: Error
           schema:
